# sodax-backend-analyzer

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  rustfmt.toml
src/: cli.rs  config.rs  constants.rs  db.rs  evm.rs  functions.rs  handlers.rs  helpers.rs  lib.rs  main.rs  models.rs  structs.rs  validation.rs  validators.rs
tests/: common.rs  evm_integration_tests.rs  general_integration_tests.rs  mongodb_integration_tests.rs
