[package]
name = "sodax_backend_analizer"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
serde = "1.0.188"

[dependencies.mongodb]
version = "3.2.4"
features = ["sync"]

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = [
    "precommit-hook",
    "run-cargo-check",
    "run-cargo-clippy",
]
