[package]
name = "sodax_backend_analizer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.23"
dotenv = "0.15.0"
futures = "0.3.31"
primitive-types = "0.13.1"
serde = "1.0.188"
tokio = {version = "1.47.0", features = ["full"]}

[dependencies.mongodb]
version = "3.2.4"

[dev-dependencies]
tokio = {version = "1.47.0", features = ["full", "test-util"]}

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = [
    "precommit-hook",
    "run-cargo-check",
    "run-cargo-clippy",
]
